added post start script

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "db:migrate": "./node_modules/.bin/sequelize db:migrate",
     "db:rollback": "./node_modules/.bin/sequelize db:migrate:undo",
     "generate:migration": "./node_modules/.bin/sequelize migration:create",
-    "prestart": "npm install"
+    "prestart": "npm install",
+    "poststart": "npm run db:migrate"
   },
   "lint-staged": {
     "app/**/*.ts": [
