--- a/package.json
+++ b/package.json
@@ -98,7 +98,8 @@
     "typescript": "~2.2.1",
     "typescript-formatter": "^5.1.1",
     "uuid": "~3.0.1",
-    "winston": "~2.3.1"
+    "winston": "~2.3.1",
+    "tslint": "^5.13.1"
   },
   "devDependencies": {
     "@types/body-parser": "~0.0.33",
@@ -110,8 +111,7 @@
     "@types/sequelize": "~3.4.40",
     "@types/winston": "~2.2.0",
     "chai": "~3.5.0",
-    "extendify": "~1.0.0",
-    "tslint": "^5.13.1"
+    "extendify": "~1.0.0"
   },
   "engines": {
     "node": ">=8.12.0"
